fix: profile picture is now finally visible: to view static images adjust `<projectname>/settings.py` and `<projectname>/urls.py`(!)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,3 +10,7 @@ body {
     padding: 5px;
 }
 
+.profile-picture {
+    width: 200px;
+}
+
